fix:menu top css

--- a/assets/globalStyle.css
+++ b/assets/globalStyle.css
@@ -10,6 +10,7 @@ body {
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-top: 0%;
 }
 
 .card {
