--- a/assets/globalStyle.css
+++ b/assets/globalStyle.css
@@ -11,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin-top: 0%;
+  margin-left: 0%;
 }
 
 .card {
