--- a/assets/globalStyle.css
+++ b/assets/globalStyle.css
@@ -10,8 +10,8 @@ body {
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin-top: 0%;
-  margin-left: 0%;
+  margin-top: 3px;
+  margin-left: 4px;
 }
 
 .card {
